Signup component with Flexlayout

--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,7 +1,13 @@
 <section>
-    <form>
-        <input type="email" placeholder="Your Email" matInput/><br>
-        <input type="password" placeholder="Your Password" matInput/><br>
+    <form fxLayout="column" fxLayoutAlign="center center">
+        <mat-form-field>
+            <input type="email" placeholder="Your Email" matInput/>
+        </mat-form-field>
+        
+        <mat-form-field>
+            <input type="password" placeholder="Your Password" matInput/>
+        </mat-form-field>
+
         <button mat-raised-button color="primary">Sign Up</button>
     </form>
 </section>
