--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,11 +1,30 @@
 <section>
-    <form fxLayout="column" fxLayoutAlign="center center">
+    <form #signUpForm="ngForm" class="formStyle"
+        fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px"         
+        (ngSubmit)="submitSignUpForm(signUpForm)">
         <mat-form-field>
-            <input type="email" placeholder="Your Email" matInput/>
+            <input type="email" #emailID="ngModel" name="email" placeholder="Your Email" 
+                matInput ngModel
+                required email>
+            <mat-error *ngIf="!emailID.hasError('required')">Invalid Email ID</mat-error>
+            <mat-error *ngIf="emailID.hasError('required')">Email is required</mat-error>
         </mat-form-field>
         
         <mat-form-field>
-            <input type="password" placeholder="Your Password" matInput/>
+            <input type="password" #pwd="ngModel" name="password" placeholder="Your Password" 
+                ngModel matInput 
+                required minlength="6">
+            <mat-hint>Should be 6 char length</mat-hint>
+            <mat-error *ngIf="pwd.hasError('required')">Password is required</mat-error>
+            <mat-error *ngIf="pwd.hasError('minlength')">Password should be 6 characters</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Your DOB</mat-label>
+            <input name="dob" [matDatepicker]="picker"
+                ngModel matInput>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
         <button mat-raised-button color="primary">Sign Up</button>
