removed unused style class

--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,5 +1,5 @@
 <section>
-    <form #signUpForm="ngForm" class="formStyle"
+    <form #signUpForm="ngForm"
         fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px"         
         (ngSubmit)="submitSignUpForm(signUpForm)">
         <mat-form-field>
