Intergrated Login and SignUp service with SpringBoot

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,7 +1,8 @@
 <section>
     <form #loginForm="ngForm" 
           fxLayout="column" fxLayoutGap="10px"
-          fxLayoutAlign="center center">
+          fxLayoutAlign="center center"
+          (ngSubmit)="submitLoginForm(loginForm)">
         <mat-form-field>
             <input type="text" #userId="ngModel" name="userId" placeholder="Your User ID" 
                 matInput ngModel required>
