--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -11,6 +11,12 @@
         </mat-form-field>
         
         <mat-form-field>
+            <input type="text" #userId="ngModel" name="userId" placeholder="Your User ID" 
+                matInput ngModel required>
+            <mat-error *ngIf="userId.hasError('required')">User ID is required</mat-error>
+        </mat-form-field> 
+        
+        <mat-form-field>
             <input type="password" #pwd="ngModel" name="password" placeholder="Your Password" 
                 ngModel matInput 
                 required minlength="6">
