--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,33 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation"> 
+        <p>Hello side nav</p>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <div>
+                <button mat-icon-button (click)="sidenav.toggle()">
+                    <mat-icon>menu</mat-icon>
+                </button>
+            </div>
+            <div>
+                LOGO
+            </div>
+            <div fxFlex fxLayout fxLayoutAlign="flex-end">
+                <ul fxLayout fxLayoutGap="10px" class="nav-item">
+                    <li>
+                        <a routerLink="login">Login</a>
+                    </li>
+                    <li>
+                        <a routerLink="signup">Signup</a>
+                    </li>
+                    <li>
+                        <a routerLink="training">Training</a>
+                    </li>                    
+                </ul>                
+            </div>
+        </mat-toolbar>
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </mat-sidenav-content>
+</mat-sidenav-container>
