--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,8 @@ a:hover, a:active {
     list-style: none;
     padding: 0;
 }
+
+.nav-caption {
+    display: inline-block;
+    padding-left: 6px;
+}
