--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,25 @@
 <mat-sidenav-container>
     <mat-sidenav #sidenav role="navigation"> 
-        <p>Hello side nav</p>
+        <mat-nav-list>
+            <a mat-list-item routerLink="login" (click)="sidenav.close()">
+                <mat-icon>input</mat-icon>
+                <span class="nav-caption">Login</span>                
+            </a>
+            <a mat-list-item routerLink="signup" (click)="sidenav.close()">
+                <mat-icon>face</mat-icon>
+                <span class="nav-caption">Signup</span>                
+            </a>
+            <a mat-list-item routerLink="training" (click)="sidenav.close()">
+                <mat-icon>fitness_center</mat-icon>
+                <span class="nav-caption">Training</span>                
+            </a>
+            <mat-list-item (click)="sidenav.close()">
+                <button mat-icon-button>
+                    <mat-icon>eject</mat-icon>
+                    <span class="nav-caption">Logout</span> 
+                </button>
+            </mat-list-item>                
+         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
@@ -12,7 +31,7 @@
             <div>
                 LOGO
             </div>
-            <div fxFlex fxLayout fxLayoutAlign="flex-end">
+            <div fxFlex fxLayout fxLayoutAlign="flex-end"> <!-- To display the label right aligned -->
                 <ul fxLayout fxLayoutGap="10px" class="nav-item">
                     <li>
                         <a routerLink="login">Login</a>
