--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,6 @@
-<p>current-training works!</p>
+<section class="current-training" fxLayout="column" fxLayoutAlign="center center">
+    <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+    <h1>Progress Tracker: {{progress}}%</h1>
+    <p>Keep going !</p>
+    <button type="submit" mat-raised-button color="accent" (click)="onStop()">Stop</button>
+</section>
