added logout functionality

--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -11,8 +11,8 @@
         <mat-icon>fitness_center</mat-icon>
         <span class="nav-caption">Training</span>                
     </a>
-    <mat-list-item (click)="onClose()" *ngIf="isAuth">
-        <button mat-icon-button>
+    <mat-list-item *ngIf="isAuth">
+        <button mat-icon-button (click)="onLogout()">
             <mat-icon>eject</mat-icon>
             <span class="nav-caption">Logout</span> 
         </button>
