--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -20,7 +20,7 @@
                 <a routerLink="training">Training</a>
             </li>    
             <li *ngIf="isAuth">
-                <a routerLink="logout">Logout</a>
+                <a (click)="onLogout()">Logout</a>
             </li>                
         </ul>                
     </div>
