Added Table to display Past exercise Removed hardcoded event emiting Implemented dynamic subscription of current/past exercise

--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,1 +1,40 @@
-<p>past-training works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- Exercise ID Column -->
+    <ng-container matColumnDef="exerciseId">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element"> {{element.exerciseId}} </td>
+    </ng-container>
+
+    <!-- Exercise Name Column -->
+    <ng-container matColumnDef="exerciseName">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element"> {{element.exerciseName}} </td>
+    </ng-container>
+
+    <!-- Duration Column -->
+    <ng-container matColumnDef="exerciseDuration">
+        <th mat-header-cell *matHeaderCellDef>Duration</th>
+        <td mat-cell *matCellDef="let element"> {{element.exerciseDuration | number}} </td>
+    </ng-container>
+
+    <!-- Calories Column -->
+    <ng-container matColumnDef="calories">
+        <th mat-header-cell *matHeaderCellDef>Calories</th>
+        <td mat-cell *matCellDef="let element"> {{element.calories | number}} </td>
+    </ng-container>
+
+     <!-- Status Column -->
+     <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+
+     <!-- Date Column -->
+     <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayExerciseColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayExerciseColumns;"></tr>
+</table>
