--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,13 +1,18 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div fxLayoutAlign="center center">
+    <mat-form-field fxFlex="40%">
+        <input matInput type="text" placeholder="Filter" (keyup)="doFilter($event.target.value)">
+    </mat-form-field>
+</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <!-- Exercise ID Column -->
     <ng-container matColumnDef="exerciseId">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let element"> {{element.exerciseId}} </td>
     </ng-container>
 
     <!-- Exercise Name Column -->
     <ng-container matColumnDef="exerciseName">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let element"> {{element.exerciseName}} </td>
     </ng-container>
 
@@ -38,3 +43,8 @@
     <tr mat-header-row *matHeaderRowDef="displayExerciseColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayExerciseColumns;"></tr>
 </table>
+
+<mat-paginator [length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[1, 2, 3, 4, 5, 10, 25, 100]">
+</mat-paginator>
