--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -37,7 +37,7 @@
      <!-- Date Column -->
      <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayExerciseColumns"></tr>
