--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -5,10 +5,10 @@
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <!-- Exercise ID Column -->
-    <ng-container matColumnDef="exerciseId">
+    <!-- <ng-container matColumnDef="exerciseId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let element"> {{element.exerciseId}} </td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- Exercise Name Column -->
     <ng-container matColumnDef="exerciseName">
