--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -17,5 +17,7 @@
 
         <button mat-raised-button color="primary"
             [disabled]="loginForm.invalid">Login</button>
+
+        <mat-spinner *ngIf="(isLoading$ | async)"></mat-spinner>
     </form>
 </section>
